--- a/app/views/shared/_publicity.html.erb
+++ b/app/views/shared/_publicity.html.erb
@@ -1,1 +1,3 @@
-	<%= render :partial => "tutoriales/tutorials"%>
+<div style="width:160px; height:189px;">
+<%= render :partial => "tutoriales/tutorials"%>
+</div>
