--- a/app/views/tutoriales/_tutorials.html.erb
+++ b/app/views/tutoriales/_tutorials.html.erb
@@ -21,6 +21,7 @@ $(document).ready(function() {
 <% if @tutoriales.count < 0 %>
 <%else%>
 <% @tutoriales.each do |tutoriale| %>
+<div>
     <div class="row with line" style="margin:0px; padding:0px;">
 <div class="user padding-all <%= cycle('odd', 'even') %>">
 	<div class="interno" style="height:20px; cursor:pointer;">
@@ -28,7 +29,7 @@ $(document).ready(function() {
 	   </div>
    </div>
 </div>
- 
+</div>
 <!--estos modal sirven para exponer cada uno del os tutoriales, el segundo modal sirve para el tutorial principal de introducción a cúrsame--> 
 
 <div class="modal hide" id="sub_tutorials<%= tutoriale.description %>" style="display:none;">
@@ -48,6 +49,7 @@ $(document).ready(function() {
 </div>
 <% end %>
 <% end %>
+</div>
 </div>
 </div>
 </div>
