subiendo imagen precompiladad de lago jpg

--- a/app/views/layouts/new_network.html.erb
+++ b/app/views/layouts/new_network.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html style="background-image: url(/assets/lago.png); background-repeat:no-repeat;">
+<html style="background-image: url(/assets/lago.jpg); background-repeat:no-repeat;">
 
 <head>
   <meta charset="utf-8" />
