subiendo a cursame cambio en background

--- a/app/views/layouts/new_network.html.erb
+++ b/app/views/layouts/new_network.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
-<html style="background-image: url(/assets/lago.jpg); background-repeat:no-repeat;">
+<html style="background: transparent url(/assets/lago.jpg)no-repeat center top ;
+         background-attachment:fixed;">
 
 <head>
   <meta charset="utf-8" />
