--- a/app/views/layouts/new_network.html.erb
+++ b/app/views/layouts/new_network.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html style="background: transparent url(/assets/lago.jpg)no-repeat center top ;
-         background-attachment:fixed;">
+         background-attachment:fixed; width:100%; height:100%;">
 
 <head>
   <meta charset="utf-8" />
