subiendo cambios de stilos y wall

--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -68,8 +68,10 @@
       
         
         <div class="actions">
+	    <% if current_user.role == "supervisor"%>
           <h2><%= t('courses.assignments.comments') %></h2>
           <%= render :partial => 'comments/form', :locals => {:commentable => @assignment} %>
+        <%end%>
         </div>
        
         <div id="assignment_comments">
@@ -156,8 +158,10 @@
         <% end %>
         
         <div class="actions">
+	     <% if current_user.role == "supervisor"%>
           <h2><%= t('courses.assignments.comments') %></h2>
           <%= render :partial => 'comments/form', :locals => {:commentable => @assignment} %>
+         <%end%>
         </div>
         
         <div id="assignment_comments">
