--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -35,7 +35,7 @@
           </span>
         <%end%>
         <% elsif enrollment.accepted? %>
-          <span class="label-tag success"><%= t('.join_accepted') %></span>
+        <!--  <span class="label-tag success"><%#= t('.join_accepted') %></span>-->
 
         <% end %>
       
