--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -112,10 +112,11 @@
           </div>
  
         </div>
+<!--
         <div class="row with line">
           <div class="span2 description no-margin"><%= t('courses.time') %></div>
           <div class="span6"><p><%= l @course.start_date, :format => :medium %> - <%= l @course.finish_date, :format => :medium %></p></div>
-        </div>
+        </div>-->
         <div class="row with line">
           <div class="description"><%= t('courses.description') %></div>
           <div class="expander"><p><%= @course.description %></p></div>
