--- a/app/views/favorites/_my_favorite_create.html.erb
+++ b/app/views/favorites/_my_favorite_create.html.erb
@@ -6,6 +6,6 @@
 	        <%= favorite.hidden_field :avatar, :value => @user.avatar_file.xxsmall.url%>
 	    <%end%>
       <center>
-		<%= favorite.submit 'Agregar a favoritos', :class => "btn info"%>
+		<%= favorite.submit 'Agregar a contactos', :class => "btn info"%>
 	  </center>
  <%end%>
