--- a/app/views/home/_principal_wall_menu.html.erb
+++ b/app/views/home/_principal_wall_menu.html.erb
@@ -13,4 +13,4 @@
 	   <%=link_to image_tag(user_favorites.avatar), user_path(user_favorites.user_favorite_id), :rel => "dashboard-tip", :title => (user_favorites.name) %>
 	<%end%>
    
-      <%= link_to"Mis usuarios favoritos", my_favorite_users_path %>
+      <%= link_to "Mis Contactos", my_favorite_users_path %>
