--- a/app/views/tutoriales/_tutorials.html.erb
+++ b/app/views/tutoriales/_tutorials.html.erb
@@ -25,14 +25,14 @@ $(document).ready(function() {
     <div class="row with line" style="margin:0px; padding:0px;">
 <div class="user padding-all <%= cycle('odd', 'even') %>">
 	<div class="interno" style="height:20px; cursor:pointer;">
-      <a> <div data-toggle="modal" href="#sub_tutorials<%= tutoriale.description %>" style="margin:2px;"><%=tutoriale.title %></a>
+      <a> <div data-toggle="modal" href="#sub_tutorials<%=tutoriale.id%>" style="margin:2px;"><%=tutoriale.title %></a>
 	   </div>
    </div>
 </div>
 </div>
 <!--estos modal sirven para exponer cada uno del os tutoriales, el segundo modal sirve para el tutorial principal de introducción a cúrsame--> 
 
-<div class="modal hide" id="sub_tutorials<%= tutoriale.description %>" style="display:none;">
+<div class="modal hide" id="sub_tutorials<%= tutoriale.id %>" style="display:none;">
  <div class="modal-header">
    <a class="close" data-dismiss="modal" >×</a>
    <h3><%= tutoriale.title %></h3>
