--- a/app/views/tutoriales/_tutorials.html.erb
+++ b/app/views/tutoriales/_tutorials.html.erb
@@ -67,7 +67,7 @@ $(document).ready(function() {
  </div>
  <div class="modal-body">
  <center>
-<object width="520" height="315"><param name="movie" value="http://www.youtube.com/v/l0-viVzXobQ?version=3&amp;hl=es_ES&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/l0-viVzXobQ?version=3&amp;hl=es_ES&amp;rel=0" type="application/x-shockwave-flash" width="520" height="315" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+<object width="520" height="315"><param name="movie" value="http://www.youtube.com/v/BrG-0QFv57Q?version=3&amp;hl=es_ES&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/BrG-0QFv57Q?version=3&amp;hl=es_ES&amp;rel=0" type="application/x-shockwave-flash" width="520" height="315" allowscriptaccess="always" allowfullscreen="true"></embed></object>
  </center>
  </div>
 </div>
