--- a/app/views/networks/_new_network.html.erb
+++ b/app/views/networks/_new_network.html.erb
@@ -70,7 +70,7 @@
   <%= form.inputs do %>
     <%= form.input :name, :input_html => { :value => "Nombre de tu red", :class => "inputtext"},  :label => false  %>
     <%= form.input :subdomain, :input_html => { :value => "Subdominio", :class => "inputtext"},  :label => false %>
-    <%= form.hidden_field :variante, :value => "free"%>
+    <%#= form.hidden_field :variante, :value => "free"%>
 
     <%#= form.select :variante, options_for_select([[t('.free'), "free"],[t('.pro'), "pro"],[t('.enterprise'),"enterprise"]]) %>
   <% end %>
