--- a/app/views/supervisor/new_user.html.erb
+++ b/app/views/supervisor/new_user.html.erb
@@ -25,8 +25,8 @@
             <%= form.input :last_name, :input_html => { :placeholder => t('forms.last_name'), :class => "span4" } %>
             <%= form.input :role, :as => :select, :collection => { "Profesor" => "teacher", "Estudiante" => "student", "Administrador" => "supervisor" },
               :prompt => t("formtastic.actions.select_one"), :hint => "El usuario recibirá un e-mail a su correo con una contraseña aleatoria" %>
-             <%= form.hidden_field :password, :value => @password %>
-             <%= form.hidden_field :password_confirmation, :value => @password %>
+             <%= form.text_field :password, :value => @password %>
+             <%= form.text_field :password_confirmation, :value => @password %>
             <%= form.input :status, :as => :hidden, :input_html => { :value => "active" } %>
             <%= form.input :terms_of_service, :as => :hidden, :input_html => { :value => "1" } %>
           <% end %>
