pushin network user

--- a/app/views/send_reports/_reports_admin.html.erb
+++ b/app/views/send_reports/_reports_admin.html.erb
@@ -22,7 +22,7 @@
 	<%= report.user.name %>
 	<%= report.user.email %>
 	<% report.user.network.each do |network| %>
-	 <%= nentwork.name %>
+	 <%= network.name %>
 	<%end%>
 	</div>
 	<div class="span3">
