subiendo moificaciones en statics

--- a/app/views/admin/base/statistics.html.erb
+++ b/app/views/admin/base/statistics.html.erb
@@ -5,9 +5,9 @@
 
 <div id="users_resume"> </div>
 	<script type="text/javascript" charset="utf-8">
-		var usersResume = [<%= Network.count %>,<%= (User.count * 6.73324456).to_i %>,
-		<%= (User.total_supervisors * 15170 / 2253) %>,<%= User.total_teachers * 15170 / 2253 %>,
-		<%= User.total_students * 15170 / 2253 %>];
+		var usersResume = [<%= Network.count %>,<%= (User.count).to_i %>,
+		<%= (User.total_supervisors) %>,<%= User.total_teachers %>,
+		<%= User.total_students %>];
 		renderUsersGraph('users_resume', usersResume);
 </script>
 	
@@ -25,19 +25,19 @@
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_users') %></td>
-      <td><%= (User.count * 6.73324456).to_i %></td>
+      <td><%= (User.count ).to_i %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_supervisors') %></td>
-      <td><%= (User.total_supervisors * 15170 / 2253) %></td>
+      <td><%= (User.total_supervisors ) %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_teachers') %></td>
-      <td><%= User.total_teachers * 15170 / 2253 %></td>
+      <td><%= User.total_teachers %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_students') %></td>
-      <td><%= User.total_students * 15170 / 2253 %></td>
+      <td><%= User.total_students  %></td>
     </tr>
   </tbody>
 </table>
@@ -46,9 +46,9 @@
 
 <div id="courses_resume"> </div>
 <script type="text/javascript" charset="utf-8">
-	var coursesResume = [<%= Course.count * 15170 / 2253 %>,<%= Course.total_open_courses * 15170 / 2253 %>,
-			<%= Course.total_private_courses * 15170 / 2253 %>,<%= Assignment.count * 15170 / 2253 %>,
-			<%= Discussion.count * 15170 / 2253 %>,<%= Survey.count * 15170 / 2253 %>];
+	var coursesResume = [<%= Course.count %>,<%= Course.total_open_courses  %>,
+			<%= Course.total_private_courses  %>,<%= Assignment.count  %>,
+			<%= Discussion.count  %>,<%= Survey.count  %>];
 	renderCoursesGraph('courses_resume', coursesResume);
 </script>
 	
@@ -62,27 +62,27 @@
   <tbody>
     <tr>
       <td><%= t('super_admin.statistics.total_courses') %></td>
-      <td><%= Course.count * 15170 / 2253 %></td>
+      <td><%= Course.count  %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_open_courses') %></td>
-      <td><%= Course.total_open_courses * 15170 / 2253 %></td>
+      <td><%= Course.total_open_courses %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_private_courses') %></td>
-      <td><%= Course.total_private_courses * 15170 / 2253 %></td>
+      <td><%= Course.total_private_courses  %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_assignments') %></td>
-      <td><%= (Assignment.count * 15170 / 2253 ) * 8%></td>
+      <td><%= (Assignment.count  ) %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_discussions') %></td>
-      <td><%= (Discussion.count * 15170 / 2253)*6 %></td>
+      <td><%= (Discussion.count ) %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_surveys') %></td>
-      <td><%= (Survey.count * 15170 / 2253)*9 %></td>
+      <td><%= (Survey.count ) %></td>
     </tr>
   </tbody>
 </table>
@@ -93,9 +93,9 @@
 
 <div id="comments_resume"> </div>
 <script type="text/javascript" charset="utf-8">
-	var coursesResume = [<%= Comment.count * 15170 * 4 / 2253 %>,<%= Comment.total_comments_assignments * 15170 * 4 / 2253 %>,
-			<%= Comment.total_comments_discussions * 15170 * 4/ 2253 %>,
-			<%= Comment.total_comments_user_walls * 15170 * 4 / 2253 %>,<%= Comment.total_comments_course_walls * 15170 * 4 / 2253 %>];
+	var coursesResume = [<%= Comment.count %>,<%= Comment.total_comments_assignments %>,
+			<%= Comment.total_comments_discussions  %>,
+			<%= Comment.total_comments_user_walls  %>,<%= Comment.total_comments_course_walls *  %>];
 	renderCommentsGraph('comments_resume', coursesResume);
 </script>
 
@@ -109,23 +109,23 @@
   <tbody>
     <tr>
       <td><%= t('super_admin.statistics.total_comments') %></td>
-      <td><%= Comment.count * 15170 * 4 / 2253 %></td>
+      <td><%= Comment.count  %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_comments_assignments') %></td>
-      <td><%= Comment.total_comments_assignments * 15170 * 4 / 2253 %></td>
+      <td><%= Comment.total_comments_assignments  %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_comments_discussions') %></td>
-      <td><%= Comment.total_comments_discussions * 15170 * 4/ 2253 %></td>
+      <td><%= Comment.total_comments_discussions  %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_comments_user_walls') %></td>
-      <td><%= Comment.total_comments_user_walls * 15170 * 4 / 2253 %></td>
+      <td><%= Comment.total_comments_user_walls  %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_comments_course_walls') %></td>
-      <td><%= Comment.total_comments_course_walls * 15170 * 4 / 2253 %></td>
+      <td><%= Comment.total_comments_course_walls %></td>
     </tr>
   </tbody>
 </table>
