--- a/app/views/admin/networks/index.html.erb
+++ b/app/views/admin/networks/index.html.erb
@@ -5,22 +5,22 @@
 </p>
 
 <div class="networks">
- <% 
-	temp = [14,16,138,749,223,1245,956,107,163,46,58,56,14,8,474,24,3526,140,32,145,425,42,1452,153,645,345,235,301,728,2571,139]
+<!-- <#% 
+	temp = [14,16,138,749,223,1245,956,107,163,46,58,56,14,8,474,24,3526,140,32,145,425,42,1452,153,645,345,2#35,301,728,2571,139]
 	i=0
-%>
+%>-->
   <% @networks.each do |network| %>
     <div class="network">
     <hr />
       <strong>Name:</strong> <%= link_to network.name, admin_network_path(network) %><br/>
       <strong>Subdomain:</strong> <%= network.subdomain %><br />
 	  <strong>Created at:</strong> <%= network.created_at.strftime("%m/%d/%Y")  %><br />
-      <strong>Students count:</strong> <%= temp[i] %> 	  
+      <strong>Students count:</strong> <%= network.users.count %> 	  
     </div>	
 	<div id ="network_users<%= network.id %>"></div>
 	<script type="text/javascript" charset="utf-8">
 		renderUserGraph('<%= network.name %>','network_users' + <%= network.id %>,
-			'Usuarios de la red','Unidades',<%=  temp[i] %>, '<%= network.created_at.strftime("%m/%d/%Y")  %>');
+			'Usuarios de la red','Unidades',<%= network.users.count %>, '<%= network.created_at.strftime("%m/%d/%Y")  %>');
 	</script>
 	<% i = i + 1 %>
   <% end %>
