--- a/app/views/admin/networks/index.html.erb
+++ b/app/views/admin/networks/index.html.erb
@@ -20,7 +20,7 @@
 	<div id ="network_users<%= network.id %>"></div>
 	<script type="text/javascript" charset="utf-8">
 		renderUserGraph('<%= network.name %>','network_users' + <%= network.id %>,
-			'Usuarios de la red','Unidades',<%= network.users.count %>, '<%= network.users.confirmed_at.strftime("%m/%d/%Y")  %>');
+			'Usuarios de la red','Unidades',<%= network.users.count %>, '<%= network.users.remember_created_at.strftime("%m/%d/%Y")  %>');
 	</script>
   <% end %>
 </div>
