--- a/app/views/courses/_course_menu.html.erb
+++ b/app/views/courses/_course_menu.html.erb
@@ -20,7 +20,7 @@
     <%#= tab.wall t('courses.wall.header'), wall_for_course_path(@course), :class => "actualizaciones" %>
     <%= tab.assignments t('.assignments'), course_assignments_path(@course), :class => "tareas" %>
     <%#= tab.surveys t('.surveys'), course_surveys_path(@course), :class => "surveys" %>
-    <%= tab.surveys 'Quizzes', course_surveys_path(@course), :class => "surveys" %>
+    <%= tab.surveys 'Cuestionarios', course_surveys_path(@course), :class => "surveys" %>
     <%#= tab.discussions t('.discussions'), course_discussions_path(@course), :class => "discusiones" %>
      <%= tab.calification t('courses.calification.calificaciones'), calification_for_course_path(@course), :class => "calification" %>
   <% end %>
