--- a/app/views/shared/_mobile.html.erb
+++ b/app/views/shared/_mobile.html.erb
@@ -2,7 +2,7 @@
 <html manifest="" lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>Cursame</title>
+    <title>Experto</title>
     <style type="text/css">
         /**
          * Example of an initial loading indicator.
