--- a/app/views/notifications/course_discussion_added.erb
+++ b/app/views/notifications/course_discussion_added.erb
@@ -1,6 +1,6 @@
 <div class="img">
   <a href="<%= course_path(course) %>">
-    <img src="<%= image_tag(course.course_logo_file.xxsmall.url) %>" rel="tip" title="<% course.name %>">
+    <img src="<%= course.course_logo_file.xxsmall.url %>" rel="tip" title="<% course.name %>">
   </a>
 </div>
 
