subiendo cambios en cursame avatar

--- a/app/views/notifications/student_assignment_added.erb
+++ b/app/views/notifications/student_assignment_added.erb
@@ -1,6 +1,6 @@
 <div class="img">
   <a href="<%= course_path(course) %>">
-    <img src="<%= image_tag(course.course_logo_file.xxsmall.url) %>" rel="tip" title="<% course.name %>">
+    <img src="http://cursame-telefonica.s3.amazonaws.com/uploads/course_logo/1/xxsmall_movistartotal2.jpg" rel="tip" title="<% course.name %>">
   </a>
 </div>
 
