--- a/app/views/notifications/student_assignment_delivery.erb
+++ b/app/views/notifications/student_assignment_delivery.erb
@@ -1,6 +1,6 @@
 <div class="img">
   <a href="<%= user_path(student) %>">
-    <img src="http://cursame-telefonica.s3.amazonaws.com/uploads/course_logo/1/xxsmall_movistartotal2.jpg" rel="tip" title="<% student.name %>">
+    <img src="<%= student.avatar_file.xxsmall.url %>" rel="tip" title="<% student.name %>">
   </a>
 </div>
 
