--- a/app/views/notifications/student_assignment_updated.erb
+++ b/app/views/notifications/student_assignment_updated.erb
@@ -1,6 +1,8 @@
 <div class="img">
+	<% @imagecourse = course.course_logo_file.xxsmall.url %>
+	
   <a href="<%= course_path(course) %>">
-    <img src="http://cursame-telefonica.s3.amazonaws.com/uploads/course_logo/1/xxsmall_movistartotal2.jpg" rel="tip" title="<% course.name %>">
+    <img src="<%= @imagecourse %>" rel="tip" title="<% course.name %>">
   </a>
 </div>
 
