subiendo avatar de curso bajo actualización

--- a/app/views/notifications/course_discussion_added.erb
+++ b/app/views/notifications/course_discussion_added.erb
@@ -1,7 +1,7 @@
 <div class="img">
 	<% @imagecourse = course.course_logo_file.xxsmall.url %>
   <a href="<%= course_path(course) %>">
-    <img src="<%= @imagecourse %>" rel="tip" title="<% course.name %>">
+   <%=image_tag(@imagecourse) %>
   </a>
 </div>
 
