--- a/app/views/notifications/student_survey_added.erb
+++ b/app/views/notifications/student_survey_added.erb
@@ -1,9 +1,10 @@
 <div class="img">
 	<% @imagecourse = course.course_logo_file.xxsmall.url %>
   <a href="<%= course_path(course) %>">
-    <img src="<%= @imagecourse %>" rel="tip" title="<% course.name %>">
+   <%=image_tag(@imagecourse) %>
   </a>
 </div>
+
 
 <%= I18n.t 'notifications.survey_added'%> <a href="<%= survey_path(survey) %>"><%= survey.name %></a> 
 <%= I18n.t 'notifications.for_the_course'%> <a href="<%= course_path(course) %>"><%= course.name %></a>.
