--- a/app/views/notifications/student_course_rejected.erb
+++ b/app/views/notifications/student_course_rejected.erb
@@ -1,10 +1,10 @@
 <div class="img">
 	<% @imagecourse = course.course_logo_file.xxsmall.url %>
-	
   <a href="<%= course_path(course) %>">
-    <img src="<%= @imagecourse %>" rel="tip" title="<% course.name %>">
+   <%=image_tag(@imagecourse) %>
   </a>
 </div>
+
 
 <%= I18n.t 'notifications.your_course_request' %> "<%= course.name %>" <%= I18n.t 'notifications.was_rejected' %>.
 <a href="<%= courses_path %>"  class="notification-link"><%= I18n.t('notifications.show_courses') %> &gt;&gt;</a>
