--- a/app/views/notifications/course_discussion_added.erb
+++ b/app/views/notifications/course_discussion_added.erb
@@ -1,8 +1,6 @@
 <div class="img">
 	<% @imagecourse = course.course_logo_file.xxsmall.url %>
-  <a href="<%= course_path(course) %>">
-   <%=image_tag(@imagecourse) %>
-  </a>
+   <%=link_to image_tag(@imagecourse). course_path(course) %>
 </div>
 
 <%= I18n.t 'notifications.discussion_added'%> <a href="<%= discussion_path(discussion) %>"><%= discussion.title %></a> 
