--- a/app/views/notifications/student_assignment_added.erb
+++ b/app/views/notifications/student_assignment_added.erb
@@ -1,8 +1,8 @@
 <div class="img">
-	<% @imagecourse = course.course_logo_file.xxsmall.url %>
-  <a href="<%= course_path(course) %>">
-   <%=image_tag(@imagecourse) %>
-  </a>
+	<div class="img">
+		<% @imagecourse = course.course_logo_file.xxsmall.url %>
+	   <%=link_to image_tag(@imagecourse). course_path(course) %>
+	</div>
 </div>
 
 <%= I18n.t 'notifications.assignment_added'%> <a href="<%= assignment_path(assignment) %>"><%= assignment.name %></a> 
