--- a/app/views/notifications/student_course_accepted.erb
+++ b/app/views/notifications/student_course_accepted.erb
@@ -1,8 +1,6 @@
 <div class="img">
 	<% @imagecourse = course.course_logo_file.xxsmall.url %>
-  <a href="<%= course_path(course) %>">
-   <%=image_tag(@imagecourse) %>
-  </a>
+   <%=link_to image_tag(@imagecourse). course_path(course) %>
 </div>
 
 <%= I18n.t 'notifications.you_where_accepted_for_course' %> <a href="<%= course_path(course) %>"><%= course.name %></a>.
