--- a/app/views/notifications/student_course_rejected.erb
+++ b/app/views/notifications/student_course_rejected.erb
@@ -1,8 +1,6 @@
 <div class="img">
 	<% @imagecourse = course.course_logo_file.xxsmall.url %>
-  <a href="<%= course_path(course) %>">
-   <%=image_tag(@imagecourse) %>
-  </a>
+   <%=link_to image_tag(@imagecourse). course_path(course) %>
 </div>
 
 
