subiendo contenido para image avatars coourses

--- a/app/views/notifications/student_assignment_delivery.erb
+++ b/app/views/notifications/student_assignment_delivery.erb
@@ -1,6 +1,6 @@
 <div class="img">
-  <a href="<%= user_path(student) %>">
-    <img src="<%= student.avatar_file.xxsmall.url %>" rel="tip" title="<% student.name %>">
+  <a href="<%= course_path(student) %>">
+    <img src="<%= course.course_logo_file.xxsmall.url %>" rel="tip" title="<% course.name %>">
   </a>
 </div>
 
