--- a/app/views/notifications/student_assignment_added.erb
+++ b/app/views/notifications/student_assignment_added.erb
@@ -1,10 +1,8 @@
 <div class="img">
-	<div class="img">
-		<% @imagecourse = course.course_logo_file.xxsmall.url %>
-	   <%=link_to image_tag(@imagecourse). course_path(course) %>
-	</div>
+  <a href="<%= course_path(student) %>">
+    <img src="<%= course.course_logo_file.xxsmall.url %>" rel="tip" title="<% course.name %>">
+  </a>
 </div>
-
 <%= I18n.t 'notifications.assignment_added'%> <a href="<%= assignment_path(assignment) %>"><%= assignment.name %></a> 
 <%= I18n.t 'notifications.for_the_course'%> <a href="<%= course_path(course) %>"><%= course.name %></a>.
 <a href="<%= assignment_path(assignment) %>" class="notification-link"><%= I18n.t('notifications.show_assignment') %> &gt;&gt;</a>
