--- a/app/views/notifications/student_course_rejected.erb
+++ b/app/views/notifications/student_course_rejected.erb
@@ -1,6 +1,7 @@
 <div class="img">
-	<% @imagecourse = course.course_logo_file.xxsmall.url %>
-   <%=link_to image_tag(@imagecourse). course_path(course) %>
+  <a href="<%= course_path(student) %>">
+    <img src="<%= course.course_logo_file.xxsmall.url %>" rel="tip" title="<% course.name %>">
+  </a>
 </div>
 
 
