subiendo cambios de avatars

--- a/app/views/notifications/course_discussion_added.erb
+++ b/app/views/notifications/course_discussion_added.erb
@@ -1,5 +1,5 @@
 <div class="img">
-  <a href="<%= course_path(student) %>">
+  <a href="<%= course_path(course) %>">
     <img src="<%= course.course_logo_file.xxsmall.url %>" rel="tip" title="<% course.name %>">
   </a>
 </div>
