--- a/app/views/supervisor/new_user.html.erb
+++ b/app/views/supervisor/new_user.html.erb
@@ -18,7 +18,7 @@
 
       <div class="span9">
         <h2><%= t('supervisor.shared.admin_menu.new_user') %></h2>
-        <%= semantic_form_for @user, :url => users_path, :method => :post  do |form| %>
+        <%= semantic_form_for @user, :url => create_user_users_path, :method => :post  do |form| %>
           <%= form.inputs :basic do %>
             <%= form.input :email, :input_html => { :placeholder => t('forms.email') + " *", :class => "span4" } %>
             <%= form.input :first_name, :input_html => { :placeholder => t('forms.first_name') + " *", :class => "span4", :style => 'margin-right:10px;' }%>
