modificaciones al mailer

--- a/app/views/user_mailer/new_user_by_supervisor.html.erb
+++ b/app/views/user_mailer/new_user_by_supervisor.html.erb
@@ -1,32 +1,26 @@
-<h2 class="h2">Bienvenido <%= @user.name %>!</h2>
-<strong>Has sido dado de alta en Cúrsame por el administrador de la red <%= @network.name %>.</strong>
+<h2 class="h2"><br/>¡Bienvenid@ <%= @user.name %>!</h2>
+
 <% if @user.student?%>
-<strong>A partir de ahora, puedes disfrutar de Cúrsame y todas las herramientas que te ofrece como:</strong>
+<strong>A partir de ahora, puedes disfrutar de Experto Movistar y todas las herramientas que te ofrece como:</strong>
   <ul>
-    <li>Perfil en tu red social privada</li>
-    <li>Interactuar con tus compañeros y maestros</li>
-    <li>Acceso a cursos</li>
-    <li>Tareas</li>
+    <li>Perfil en nuestra social privada</li>
+    <li>Consulta del material de todas las Campañas</li>
+    <li>Interacción con todos los colaboradores de Movistar</li>
     <li>Cuestionarios</li>
-    <li>Discusiones</li>
-    <li>Compartir archivos</li>
     <li>¡Entre muchas otras!</li>
   </ul>
 <%elsif @user.teacher?%>
-<strong>A partir de ahora, puedes disfrutar de Cúrsame y todas las herramientas que te ofrece como:</strong>
+<strong>A partir de ahora, puedes disfrutar de Experto Movistar y todas las herramientas que te ofrece como:</strong>
   <ul>
-    <li>Perfil en tu red social privada</li>
-    <li>Interactuar con tus compañeros y alumnos</li>
-    <li>Acceso a cursos</li>
-    <li>Tareas</li>
+    <li>Perfil en nuestra social privada</li>
+    <li>Consulta del material de todas las Campañas</li>
+    <li>Interacción con todos los colaboradores de Movistar</li>
     <li>Cuestionarios</li>
-    <li>Discusiones</li>
-    <li>Compartir archivos</li>
     <li>¡Entre muchas otras!</li>
   </ul>
 <%end%>
-<strong>Tu contraseña para ingresar es: <%= @password %></strong>
-<p>Te recomendamos modificar esta contraseña una vez que ingreses a la plataforma.</p>
-<h1><%= link_to 'Ir a Cúrsame >>', new_user_session_url(:subdomain=>@network.subdomain) %></h1>
+<strong>Tu usuario es tu correo electrónico de Telefónica y tu contraseña es: <%= @password %></strong>
+<p>Te recomendamos modificar esta contraseña una vez que ingreses a la plataforma, esto se hace en la sección de "Configuración".</p>
+<h1><%= link_to 'Entrar a Experto Movistar >>', new_user_session_url(:subdomain=>@network.subdomain) %></h1>
 <br>
-<p>Si tienes alguna duda, puedes escribirnos a <%= link_to 'hola@cursa.me', 'mailto:hola@cursa.me' %>.</p>
+
