--- a/app/views/users/_profile_menu.html.erb
+++ b/app/views/users/_profile_menu.html.erb
@@ -13,8 +13,10 @@
 
 
    <% current_user.favorites.each do |favorites|%>
-        <%
-        if @user.id == favorites.user_favorite_id
+
+   user.id <%= @user.id %> vs <%= @favorite_p %>
+
+   <%   if @user.id == favorites.user_favorite_id
             @control_btn=false;
         else
             @control_btn=true;
