continuando con favorites

--- a/app/views/users/_profile_menu.html.erb
+++ b/app/views/users/_profile_menu.html.erb
@@ -19,8 +19,7 @@
 
    <%   if @user.id == @favorite_p
             @control_btn=false;
-        else
-            @control_btn=true;
+            break;
         end%>
    <%end%>
 
