--- a/app/views/users/_profile_menu.html.erb
+++ b/app/views/users/_profile_menu.html.erb
@@ -1,7 +1,4 @@
-<%
-@control_btn = true;
-
-%>
+<% @control_btn = true; %>
 <% if @user.view_status == "fantom"%>
 <div class="underline">
   <%= image_tag('anonimus-user/tamano/anonimus1.png') %>
@@ -14,10 +11,8 @@
 
    <% current_user.favorites.each do |favorites|%>
 
-   <% @favorite_p = favorites.user_favorite_id %>
-   user.id <%= @user.id %> vs <%= @favorite_p %>
-
-   <%   if @user.id == @favorite_p
+        <% @favorite_p = favorites.user_favorite_id %>
+        <% if @user.id == @favorite_p
             @control_btn=false;
             break;
         end%>
