--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -38,6 +38,7 @@
               <li><%= link_to 'Reports', admin_reports_path %></li>
               <li><%= link_to 'Tutoriales', admin_tutorial_path %></li>
               <li><%= link_to 'Notificaciones', admin_notification_path %></li>
+              <li><%= link_to 'Publicidad', admin_publicity_path %></li>
             </ul>
           </div>
 
