--- a/app/views/tutoriales/_tutorials.html.erb
+++ b/app/views/tutoriales/_tutorials.html.erb
@@ -62,6 +62,9 @@ $(document).ready(function() {
 	<a>Mostrar Todos</a>
 	</center>
 </div>
+ <div style="margin-left:6px;">
+	<%= render :partial => "banners/dinamic"%>
+ </div>
 
 <div class="modal hide" id="primer_tutorial" style="display:none;">
  <div class="modal-header">
