actualizacion de la web app

--- a/public/assets/Cursame/resources/sass/app.scss
+++ b/public/assets/Cursame/resources/sass/app.scss
@@ -95,7 +95,7 @@ $list-active-gradient: matte;
 }*/
 
 .x-form-login{
-	background-image:url('../images/fondo.png');
+	background-image:url('../images/wall-cursame.jpg');
 }
 
 //notification item style
