--- a/public/assets/Cursame/resources/sass/app.scss
+++ b/public/assets/Cursame/resources/sass/app.scss
@@ -66,7 +66,6 @@ $list-active-gradient: matte;
 @include pictos-iconmask('docs_black1');
 @include pictos-iconmask('help_black');
 @include pictos-iconmask('user_list');
-@include pictos-iconmask('cursame');
 @include pictos-iconmask('rss_black2');
 @include pictos-iconmask('tags');
 @include pictos-iconmask('rss_black2');
@@ -74,28 +73,12 @@ $list-active-gradient: matte;
 @include pictos-iconmask('compose'); 
 @include pictos-iconmask('check_black1');
 @include pictos-iconmask('note1');
+@include pictos-iconmask('cursame');
 
-
-//login form
-/*body{
-	background:
-	  -webkit-radial-gradient(black 15%, transparent 16%) 0 0,
-	  -webkit-radial-gradient(black 15%, transparent 16%) 8px 8px,
-	  -webkit-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
-	  -webkit-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-	background-color:#282828;
-	background-size:16px 16px;; 
-	background:
-	  -webkit-radial-gradient(black 15%, transparent 16%) 0 0,
-	  -webkit-radial-gradient(black 15%, transparent 16%) 8px 8px,
-	  -webkit-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
-	  -webkit-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-	background-color:#282828;
-	background-size:16px 16px;
-}*/
 
 .x-form-login{
 	background-image:url('../images/wall-cursame.jpg');
+	background-position:50% 10%;
 }
 
 //notification item style
