se actualizo la mobile de la nav bar

--- a/public/assets/Cursame/resources/sass/app.scss
+++ b/public/assets/Cursame/resources/sass/app.scss
@@ -74,6 +74,7 @@ $list-active-gradient: matte;
 @include pictos-iconmask('check_black1');
 @include pictos-iconmask('note1');
 @include pictos-iconmask('cursame');
+@include pictos-iconmask('team');
 
 
 .x-form-login{
